#MAIN - Adjust: pipeline and demo mode implented.